--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ionic/react": "^8.4.3",
     "@tailwindcss/vite": "^4.0.8",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
     "ionicons": "^7.4.0",
     "react": "^19.0.0",
@@ -20,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-ionicons": "^4.2.1",
     "react-router": "^7.2.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
