--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ionic/react": "^8.4.3",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
