--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-ionicons": "^4.2.1",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
